[feat] ShelterService2 Test code